text-alignment fix

--- a/express/fullstack-webpage/client/source/styles/Home.sass
+++ b/express/fullstack-webpage/client/source/styles/Home.sass
@@ -34,3 +34,7 @@
 @media only screen and (max-width: 320px)
     .home-page
         width: 250px
+
+@media only screen and (max-width: 270px)
+    .home-page
+        width: 200px
