--- a/express/fullstack-webpage/client/source/styles/ShowProducts.sass
+++ b/express/fullstack-webpage/client/source/styles/ShowProducts.sass
@@ -114,6 +114,7 @@
 @media only screen and (max-width: 1010px)
     .product-container
         width: 800px
+        text-align: center
         .product-img
             height: 450px
             width: 650px
@@ -121,6 +122,7 @@
 @media only screen and (max-width: 820px)
     .product-container
         width: 650px
+        text-align: center
         .product-img
             height: 450px
             width: 500px
@@ -128,6 +130,7 @@
 @media only screen and (max-width: 700px)
     .product-container
         width: 550px
+        text-align: center
         .product-img
             height: 350px
             width: 400px
@@ -135,6 +138,7 @@
 @media only screen and (max-width: 620px)
     .product-container
         width: 450px
+        text-align: center
         .product-img
             height: 300px
             width: 350px
@@ -142,6 +146,7 @@
 @media only screen and (max-width: 480px)
     .product-container
         width: 350px
+        text-align: center
         .product-img
             height: 250px
             width: 300px
@@ -149,6 +154,7 @@
 @media only screen and (max-width: 380px)
     .product-container
         width: 300px
+        text-align: center
         .product-img
             height: 200px
             width: 250px
@@ -165,6 +171,7 @@
 @media only screen and (max-width: 320px)
     .product-container
         width: 250px
+        text-align: center
         .product-img
             height: 150px
             width: 200px
@@ -180,3 +187,24 @@
         a
             .details-btn
                 padding: 2px 15px
+            
+@media only screen and (max-width: 270px)
+    .product-container
+        width: 200px
+        text-align: center
+        .product-img
+            height: 130px
+            width: 180px
+        .info
+            margin: 5px 0px
+            letter-spacing: 0.5px
+        h1
+            font-size: 20px
+        h2
+            font-size: 16px
+        h3
+            font-size: 13px
+        a
+            .details-btn
+                font-size: 16px
+                padding: 2px 12px
